--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "slick-vuejs": "^1.0.9",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-carousel": "^0.1.36",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
